--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.1.5",
+    "nuxt": "^3.5.2",
+    "postcss": "^8.4.24",
+    "sass": "^1.63.5",
+    "tailwindcss": "^3.3.2"
   },
   "type": "module"
 }
